# openapi.yaml
@@ -58,8 +58,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/emp_info"
-        400:
-          $ref: "#/components/responses/400BadRequest"
+        401:
+          $ref: "#/components/responses/401Unauthorized"
         500:
           $ref: "#/components/responses/500InternalServerError"
 
@@ -149,8 +149,56 @@ paths:
           $ref: "#/components/responses/405NotAllowed"
         500:
           $ref: "#/components/responses/500InternalServerError"
+
+    get:
+      security:
+        - contacts_auth: []
+      tags:
+        - Employee
+      parameters:
+        - $ref: "#/components/parameters/emp_id"
+
+      summary: Gets employee's profile info 
+      description: Endpoint fetches the profile info of an employee can only be accessed by user themself
+      responses:
+        200:
+          description: A simple response containing address, employee Id, name, phone number and email 
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  profileInfo:
+                    type: object
+                    properties:
+                      name:
+                        $ref: "#/components/schemas/name"
+                      email:
+                        $ref: "#/components/schemas/email"
+                      phone:
+                        $ref: "#/components/schemas/phone"
+                      address:
+                        $ref: "#/components/schemas/address"
+                      emp_id:
+                        $ref: "#/components/schemas/emp_id"
+
+                         
+        400:
+          $ref: "#/components/responses/400BadRequest"
+        401:
+          $ref: "#/components/responses/401Unauthorized"
+        403:
+          $ref: "#/components/responses/403Forbidden"
+        404:
+          $ref: "#/components/responses/404NotFound"
+        405:
+          $ref: "#/components/responses/405NotAllowed"
+        500:
+          $ref: "#/components/responses/500InternalServerError"
         
-  /employee/{emp_id}/requests:
+  /employee/{emp_id}/request:
     get:
       tags: 
         - Employee
@@ -178,25 +226,16 @@ paths:
       tags:
         - Employee
       summary: Creates a new request in the db
+      parameters:
+        - $ref: "#/components/parameters/emp_id"
+      requestBody:
+        $ref: "#/components/requestBodies/create_request_body"
       security:
         - contacts_auth: []
       responses:
-        200:
-          description: Request created by user
-          content:
-            application/json: 
-              schema:
-                type: object
-                properties:
-                  success: 
-                    type: boolean
-                  data:
-                    type: array
-                    items:
-                      $ref: "#/components/schemas/request"
         
-        200:
-          $ref: "#/components/responses/200requests"
+        201:
+          $ref: "#/components/responses/201RequestCreated"
         400:
           $ref: '#/components/responses/400BadRequest'
         401:
@@ -245,7 +284,7 @@ paths:
                   - reports_to
       responses:
         200:
-          $ref: "#/components/responses/200requests"
+          $ref: "#/components/responses/200"
         400:
           $ref: '#/components/responses/400BadRequest'
         401:
@@ -540,6 +579,22 @@ components:
               username:
                 type: integer
             
+    create_request_body:
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              name:
+                  $ref: "#/components/schemas/name" 
+              phone: 
+                  $ref: "#/components/schemas/phone" 
+              email:
+                  $ref: "#/components/schemas/email" 
+              address: 
+                  $ref: "#/components/schemas/address" 
+
     request:
       required: true
       content: 
@@ -560,7 +615,7 @@ components:
     request_status:
       name: status
       in: query
-      required: false
+      required: true 
       description: status of the request can be a csv string of committed,rejected, approved_by_hr, hr_assigned 
       schema:
         type: string
@@ -611,14 +666,26 @@ components:
             properties:
               success:
                 type: boolean
-              message:
-                type: string
               emp_id: 
                 type: integer
             required:
               - success
-              - message
               - emp_id
+
+    201RequestCreated:
+      description: Request created response
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              success:
+                type: boolean
+              request_id: 
+                type: integer
+            required:
+              - success
+              - request_id 
 
     200requests:
       description: All requests that fall in the query catagories 
