# src/entities/employee/employee.py
@@ -5,6 +5,7 @@ import time
 from ...utils.general_utils import check_pass, hash_pass
 from ...utils.async_pg_db_utils import (
     match_string_in_field,
+    read_by_multiple_att_and_keys,
     read_fields_from_record,
     update_one_record,
     write_to_table,
@@ -13,7 +14,7 @@ from math import ceil
 import random
 
 
-class Employee(ABC):
+class Employee():
     # def __init__(self, employee_info):
     #     empId, name, phone, email, json_str_address, user_type = employee_info
     #     self.name = name
@@ -29,8 +30,8 @@ class Employee(ABC):
     #     # print(self.name,self.phone,self.email,self.address)
     #
 
-    def __init__(self):
-        pass
+    def __init__(self,emp_id):
+        self.emp_id = emp_id
 
     def get_profile_info(self):
         profile = {
@@ -65,11 +66,13 @@ class Employee(ABC):
             return False
 
     async def request_self_info_change(self, updated_info, empId):
-        # created_by integer NOT NULL, updated_info text NOT NULL, hr_assigned integer, approved_by_hr integer NOT NULL, remark text, created_at integer NOT NULL, update_committed integer NOT NULL
-        all_hr = await read_fields_from_record(
-            "employees", "empId", "user_type", ["hr"]
-        )
-        try:
+        is_request_in_progress = await read_by_multiple_att_and_keys("requests","created_by",["created_by","request_status"],[empId,["approved_by_hr","hr_assigned"]])
+        if not len(is_request_in_progress) == 0 :
+            raise ValueError("One request already under proccess")
+        else:
+            all_hr = await read_fields_from_record(
+                "employees", "empId", "user_type", ["hr"]
+            )
             all_hr = [tuple_emp_id[0] for tuple_emp_id in all_hr]
             if not all_hr:
                 raise ValueError("No HR employee to assign request to.")
@@ -77,16 +80,16 @@ class Employee(ABC):
                 assigned_hr = random.choice(all_hr)
                 if len(all_hr) == 1:
                     if all_hr[0] == empId:
-                        print(
-                            "\nWarning - you are the only HR hence you will be approving your own request\n"
-                        )
+                        # print(
+                        #     "\nWarning - you are the only HR hence you will be approving your own request\n"
+                        # )
                         assigned_hr = empId
                 else:
                     while assigned_hr == empId:
                         assigned_hr = random.choice(all_hr)
                 request = {
                     "created_by": empId,
-                    "updated_info": updated_info,
+                    "updated_info": json.dumps(updated_info),
                     "assigned_hr": assigned_hr,
                     "created_at": ceil(time.time()),
                     "update_committed_at": 0,
@@ -95,12 +98,11 @@ class Employee(ABC):
                 }
                 created_request = await write_to_table("requests", request)
                 print("updated user will be ", created_request)
-                return True
+                return created_request[0] 
 
-        except Exception as e:
-            message = str(e)
-            print(message)
-
+    async def get_my_requests(self,current_status_list):
+        my_req = await read_by_multiple_att_and_keys("requests","created_by",["created_by","request_status"],[self.emp_id,current_status_list])
+        return my_req
     @abstractmethod
     def info():
         pass
